# swagger.json
@@ -377,6 +377,103 @@
         }
       }
     },
+    "/post/share": {
+      "post": {
+        "consumes": ["application/json"],
+        "tags": [
+          "Post"
+        ],
+        "summary": "API to Share post internally",
+        "parameters": [
+          {
+            "name": "description",
+            "in": "formData",
+            "type": "string"
+          },
+          {
+            "name": "moodId",
+            "in": "formData",
+            "type": "number",
+            "required": true
+          },
+          {
+            "name": "userId",
+            "in": "formData",
+            "type": "number"
+          },
+          {
+            "name": "image",
+            "in": "formData",
+            "type": "file"
+          },
+          {
+            "name": "video",
+            "in": "formData",
+            "type": "file"
+          },
+          {
+            "name": "profileType",
+            "in": "formData",
+            "default": "personal",
+            "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "formData",
+            "default": "normal",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "languageCode",
+            "in": "formData",
+            "required": true,
+            "default": "en",
+            "type": "string",
+            "enum": ["en", "hi", "ta", "or"]
+          },
+          {
+            "name": "source",
+            "in": "formData",
+            "default": "Self",
+            "type": "string",
+            "enum": ["Self", "Forwarded", "Link"]
+          },
+          {
+            "name": "latitude",
+            "in": "formData",
+            "type": "number"
+          },
+          {
+            "name": "longitude",
+            "in": "formData",
+            "type": "number"
+          },
+          {
+            "name": "address",
+            "in": "formData",
+            "type": "string"
+          },
+          {
+            "name": "poll",
+            "in": "formData",
+            "type": "string",
+            "default": "{\"question\":\"best indian smartphone company?\",\"options\":[\"iball\",\"micromax\",\"lava\"], \"expiryDate\": \"2020-10-25 00:00:00\"}"
+          },
+          {
+            "$ref": "#/parameters/tokenHeader"
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/200"
+          },
+          "400": {
+            "$ref": "#/responses/400"
+          }
+        }
+      }
+    },
     "/post/submitPollAnswer": {
       "post": {
         "tags": [
